--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
+  # https://pub.dev/packages/google_fonts
   # The google_fonts package for Flutter allows you to easily use any of the 977 fonts
   # (and their variants) from fonts.google.com in your Flutter app.
   google_fonts: ^1.1.1
@@ -59,6 +60,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    #- packages/flutter_gallery_assets/fonts/GalleryIcons.ttf
+    - fonts/google_fonts/RobotoCondensed-Regular.ttf
+    - fonts/google_fonts/RobotoCondensed-Bold.ttf
+    - fonts/google_fonts/Eczar-SemiBold.ttf
+    - fonts/google_fonts/Eczar-Regular.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
